<resources>
    <string name="app_name">Puzzlecito</string>
    <string name="_00_00_00" translatable="false">00:00:00</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="exit">exit</string>
    <string name="score">score</string>
    <string name="play">play</string>
    <string name="urlhelp" translatable="false">https://sites.google.com/uoc.edu/help-r2dedos</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="confirm">Confirm</string>
    <string name="your_score">Your Score:</string>
    <string name="accept">Accept</string>
    <string name="congratulations">CONGRATULATIONS!!</string>
    <string name="default_web_client_id1" translatable="false">999249083286-lf3p4ukvmgdnrp43cs2mj46ur62667oa.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in</string>
    <string name="ranking">RANKING</string>
    <string name="name">NAME</string>
    <string name="time_sec">TIME (sec)</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="help">Help</string>
    <string name="select_image">Select Image</string>
    <string name="on_off_music">On/Off Music</string>
    <string name="music_file">Music file</string>
    <string name="onBackPressed">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

</resources>